--- a/SP23.P03.Web/ClientApp/src/pages/Trips/Home.css
+++ b/SP23.P03.Web/ClientApp/src/pages/Trips/Home.css
@@ -21,10 +21,60 @@
 
 .train {
     position: absolute;
-    width: 65%;
-    bottom: 4%;
-    right: 50px;
-    left: 10%;
-    transform: rotate(345deg);
+    width: 77%;
+    top:-2%;
+    right:20px;
+    
+    transform: rotate(338deg);
 }
+}
+
+/* overrides and helpers go here */
+.mvh-100 {
+    min-height: 50px;
+}
+
+.mvh-90 {
+    min-height: 50px;
+}
+
+.flex-container {
+    display: flex;
+    background-color: floralwhite;
+    color: mediumpurple;
+    margin: 30px;
+    line-height: 50px;
+    color: mediumpurple;
+    width: 200px;
+    text-align: justify-all;
+    line-height: 80px;
+    font-size: 20px;
+}
+
+.s1, .s2, .s3 {
+    display: flex;
+    background-color: white;
+    opacity: 0.7;
+    text-emphasis-color: black;
+    margin: 20px;
+    line-height: 30px;
+    width: 200px;
+    text-align-last: center;
+    border: 5px solid gray;
+    font-size: 20px;
+}
+
+.s11, .s22, .s33 {
+    width: 320px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;
+    background-color: aliceblue;
+    opacity: 0.7;
+    text-emphasis-color: black;
+    font-size: 20px;
+}
+
+.m1{
+ width:100px;   
 }
